# gst-plugins-bad1.0

./: ChangeLog  configure.ac  meson.build
debian/: build-deps  build-deps.in  changelog  control  control.in  gstreamer-hybris.install  gstreamer-plugins-bad.install  gstreamer1.0-hybris.install  gstreamer1.0-plugins-bad.install  gstreamer1.0-wpe.install  libgstreamer-plugins-bad-dev.install  libgstreamer-plugins-bad.install  libgstreamer-plugins-bad1.0-0.install  rules
debian/patches/: series
docs/libs/: Makefile.am
ext/: Makefile.am  meson.build
ext/hybris/: Makefile.am  gsthybrissink.c  gsthybrissink.h  meson.build  mirpool.c  mirpool.h
ext/modplug/: Makefile.am
ext/opencv/: Makefile.am  gstfaceblur.cpp  gstfacedetect.cpp
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/mir/: Makefile.am  gstmircontext.c  gstmircontext.h  meson.build  mir-prelude.h  mirallocator.c  mirallocator.h
po/: gst-plugins-bad.pot
sys/: Makefile.am
sys/androidmedia/: Makefile.am  gstamc-codec.h  gstamc-constants.h  gstamc-format.h  gstamc.h  gstamcaudiodec.h  gstamcaudiodechybris.c  gstamchybris.c  gstamcvideodec.h  gstamcvideodechybris.c  meson.build
tests/check/: Makefile.am  meson.build
tests/validate/: meson.build
